
2008-07-312  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8864: Allow TS config.absRefPrefix to work with resources in typo3conf/ext. Make it work with a changed location of fileadmin/. (fix by Bejamin Mack)
	* Fixed bug #8833: TCA "check" type field checkboxes have no labels when in 1-column display (thanks to Francois Suter)

2008-07-11  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8941: Fixed an uninitialized array that might lead to PHP warning (Thanks to Ralf Hettinger)

2008-07-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8851: navFrameScript is not loaded for submodules (thanks to Christian Ehret)
	* Fixed bug #8904: Menu of subpages renders target="{$content.pageFrameObj}" (Thanks to Steffen Kamper)

2008-07-07  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8703: More Options>Access wasn't being shown in the pages click-menus (Thanks to Andreas Wagner)

2008-07-03  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #7711: Element browser ignores "Hide in menu" flag (Thanks to Christian Kuhn)
	* Fixed bug #8840: Wrong title of edit icon of "Include basis template" section when editing template records (Thanks to Christian Kuhn)

2008-07-01  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8506: Fileadmins folder overview need a gap between folder path and file amount (Thanks to Stefano Kowalke)

2008-06-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #8791 (revisited): Let htmlArea RTE context menu use the RTE API

2008-06-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug 8314: rtehtmlarea: Argument 1 passed to t3lib_div::array_merge_recursive_overrule() must be an array, null given

2008-06-27  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7159: _DEFAULT_PI_VARS in felogin (Thanks to Steffen Kamper)
	* Fixed bug #8761: tree.js - Typo in function parameter highlightID
	* Fixed bug #8497: User Admin > Compare User Settings Inconsistencies (Thanks to Michiel Roos and Francois Suter)
